fix scroll and visibility

--- a/src/css/modal-input.css
+++ b/src/css/modal-input.css
@@ -3,13 +3,27 @@ body.modal-open {
 }
 
 .modal-input-overlay {
+  overflow: scroll;
   position: fixed;
-  inset: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  /* inset: 0; */
   background: rgba(0, 0, 0, 0.4);
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 16px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
+}
+.modal-input-overlay.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
 
 .modal-input {
@@ -31,7 +45,7 @@ body.modal-open {
 }
 
 .modal-input-title {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 120%;
@@ -45,7 +59,7 @@ body.modal-open {
   flex-direction: column;
   padding-top: 24px;
   gap: 8px;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
@@ -60,7 +74,7 @@ body.modal-open {
   width: 100%;
   height: 40px;
   background: rgba(2, 6, 10, 0.05);
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
@@ -71,7 +85,6 @@ body.modal-open {
   min-height: 180px;
   resize: none;
 }
-
 
 .modal-input-form-label input:focus,
 .modal-input-form-label textarea:focus {
@@ -111,7 +124,6 @@ body.modal-open {
   cursor: not-allowed;
 }
 
-
 .modal-input-form-submitbtn {
   margin-top: 24px;
   border: 1px solid #88765c;
@@ -120,7 +132,7 @@ body.modal-open {
   width: 100%;
   height: 45px;
   background: #88765c;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
